# Kasaio

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: notion-sync.yml  release.yml
scripts/: release.js
src/: App.tsx  globals.css  main.tsx
src-backend/: alembic.ini  database.py  main.py  python-sidecar.spec  requirements.txt  seed.py
src-backend/alembic/: env.py
src-backend/enums/: asset_type_enum.py  currency_enum.py  investment_transaction_type_enum.py  transaction_type_enum.py
src-backend/models/: __init__.py  asset.py  asset_price.py  bes_contribution.py  bes_plan.py  category.py  exchange_rate.py  holding.py  investment_transaction.py  transaction.py
src-backend/routers/: asset_price_router.py  asset_router.py  bes_router.py  categoies_router.py  category_router.py  exchange_rate_router.py  holding_router.py  investment_transaction_router.py  portfolio_router.py  transactions_router.py
src-backend/schemas/: asset_price_schemas.py  asset_schemas.py  bes_schemas.py  category_schemas.py  exchange_rate_schemas.py  holding_schemas.py  investment_transaction_schemas.py  portfolio_schemas.py  transaction_schemas.py
src-backend/services/: asset_price_service.py  asset_service.py  bes_service.py  category_service.py  exchange_rate_service.py  holding_service.py  investment_transaction_service.py  portfolio_service.py  transaction_service.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: assets.ts  (+8 more)
(+64 files in other folders)
