[package]
name = "kasaio"
version = "0.1.0"
description = "A modern desktop app for tracking household income, expenses, and investments."
authors = ["Mustafa Fatih Can"]
edition = "2021"

[lib]
name = "kasaio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
