[package]
name = "kasaio"
version = "2.0.1"
description = "A modern desktop app for tracking household income, expenses, and investments."
authors = ["Mustafa Fatih Can"]
edition = "2021"

[lib]
name = "kasaio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2.10.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1.50.0", features = ["time"] }
